@@ -1,2 +1,2 @@
 // should also be detected when changed
-body{color: #bbb;}
+body{color: #ccc;}
