@@ -1,6 +1,7 @@
 Revision history for perl distribution Mojolicious-Plugin-AssetPack
 
 0.61 Not Released
+ - Add include_paths() to Scss preprocessor
  - Fix using SASS_PATH environment variable when calculating checksum #60
  - Deprecating asset->preprocessor() in favor of asset->preprocessors->add()
 
